[gd_scene load_steps=9 format=3 uid="uid://xby8pewycng"]

[ext_resource type="Script" path="res://components/scripts/player_gui.gd" id="1_jsxnq"]
[ext_resource type="Texture2D" uid="uid://cxajiheooqevw" path="res://components/sprites/GUI/player_GUI/nathan/Skill1_GUI_nathan.png" id="2_0f0eu"]
[ext_resource type="Texture2D" uid="uid://bh58pmpvmwckg" path="res://components/sprites/GUI/player_GUI/Skill_GUI_bg.png" id="3_0iqn6"]
[ext_resource type="Texture2D" uid="uid://d0udebg6bc5jk" path="res://components/sprites/GUI/player_GUI/nathan/Eva_GUI_nathan.png" id="4_pqgsg"]
[ext_resource type="Texture2D" uid="uid://4ui1eecu07vp" path="res://components/sprites/GUI/player_GUI/nathan/Skill2_GUI_nathan.png" id="5_bbco0"]
[ext_resource type="Texture2D" uid="uid://bf18bigyr5ycl" path="res://components/sprites/GUI/player_GUI/nathan/Ulti_GUI_nathan.png" id="6_hpsbx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dcn56"]
bg_color = Color(0.219608, 0.219608, 0.219608, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n23eg"]
bg_color = Color(1, 0, 0.0352941, 1)

[node name="Nathan_GUI" type="Control"]
process_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jsxnq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 135
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Health_bar" type="ProgressBar" parent="MarginContainer/PanelContainer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -542.0
offset_bottom = 59.0
grow_horizontal = 0
theme_override_styles/background = SubResource("StyleBoxFlat_dcn56")
theme_override_styles/fill = SubResource("StyleBoxFlat_n23eg")
step = 1.0
rounded = true
show_percentage = false

[node name="Health_label" type="Label" parent="MarginContainer/PanelContainer/Control/Health_bar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "0/0"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -544.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="Control" type="Control" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Skill1_cooldown" type="TextureProgressBar" parent="GridContainer/Control"]
layout_mode = 2
anchor_left = 0.746354
anchor_top = 0.590074
anchor_right = 0.828604
anchor_bottom = 0.880368
offset_right = 322.08
offset_bottom = 322.08
scale = Vector2(0.329, 0.329)
step = 0.001
allow_greater = true
fill_mode = 5
texture_under = ExtResource("2_0f0eu")
texture_progress = ExtResource("3_0iqn6")
metadata/_edit_use_anchors_ = true

[node name="Eva_cooldown" type="TextureProgressBar" parent="GridContainer/Control"]
layout_mode = 2
anchor_left = 0.755729
anchor_top = 0.191176
anchor_right = 0.837979
anchor_bottom = 0.481471
offset_right = 322.08
offset_bottom = 322.08
scale = Vector2(0.329, 0.329)
step = 0.001
allow_greater = true
fill_mode = 5
texture_under = ExtResource("4_pqgsg")
texture_progress = ExtResource("3_0iqn6")
metadata/_edit_use_anchors_ = true

[node name="Skill2_cooldown" type="TextureProgressBar" parent="GridContainer/Control"]
layout_mode = 2
anchor_left = 0.869
anchor_top = 0.0992647
anchor_right = 0.952
anchor_bottom = 0.382
offset_left = 0.52002
offset_top = -4.0
offset_right = 321.16
offset_bottom = 322.192
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.329, 0.329)
step = 0.001
allow_greater = true
fill_mode = 5
texture_under = ExtResource("5_bbco0")
texture_progress = ExtResource("3_0iqn6")

[node name="Ulti_cooldown" type="TextureProgressBar" parent="GridContainer/Control"]
layout_mode = 2
anchor_left = 0.836
anchor_top = 0.39
anchor_right = 0.953
anchor_bottom = 0.8
offset_left = 0.880005
offset_top = -0.160004
offset_right = 256.24
offset_bottom = 256.8
scale = Vector2(0.465, 0.465)
step = 0.001
allow_greater = true
fill_mode = 5
texture_under = ExtResource("6_hpsbx")
texture_progress = ExtResource("3_0iqn6")
metadata/_edit_use_anchors_ = true
